--- a/src/components/commons/NeroLogo.module.scss
+++ b/src/components/commons/NeroLogo.module.scss
@@ -1,19 +1,26 @@
 .wrapper {
-  z-index: 5;
+	// z-index 删了会导致 subitle 被遮盖
+	z-index: 5;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	// 防止刘海屏遮挡
+	padding-top: 12vh;
+	
   .nero {
     // 不要让图片宽度超过文字宽度太多
-    width: calc(24px * 5.5);
-    display: block;
-    margin: 0 auto;
-    padding-bottom: 4px;
+    width: calc(8.25em);
+	padding-button: 1vh;
   }
 
   .subtitle {
+	display: block;
     font-size: 24px;
     color: white;
-    text-align: center;
-    max-width: calc(100vw - 60px);
+	// 下面三句是为了防止文字横向溢出的
+    max-width: calc(100vw - 3em);
     overflow: hidden;
     text-overflow: ellipsis;
+	white-space: nowrap;
   }
 }
